Update ExtractSru.java
Address codacy issues